feat: add speed layer